crates/rd2qmd-cli/tests/snapshots/integration__simple_no_pagetitle.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: output
---
---
title: "A Simple Function"
aliases:
  - "simple"
---

## Description

 This is a simple function for testing. 

## Usage

```r
simple(x, y = 1)
```

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `x`
  - The first argument.

- - `y`
  - The second argument, defaults to 1.

:::

## Value

 Returns the sum of `x` and `y`. 

## Examples

```{r}
simple(1, 2)
simple(10)
```
