crates/rd2qmd-cli/tests/snapshots/integration__with_links_qmd.snap
---
source: crates/rd2qmd-cli/tests/integration.rs
expression: output
---
---
title: "Function with Links"
pagetitle: "Function with Links — with_links"
aliases:
  - "with_links"
---

# Function with Links

## Description

 This function demonstrates various link types. See [`simple`](https://rdrr.io/r/base/simple.html) for a simpler example. Also see `stats::lm` for linear models. 

## Usage

```r
with_links(data)
```

## Arguments

::: {.list-table header-rows=1}

- - Argument
  - Description

- - `data`
  - A data frame. See `base::data.frame`.

:::

## See Also

[`simple`](https://rdrr.io/r/base/simple.html), `ggplot2::ggplot`

## Examples

```{r}
with_links(mtcars)
```
